refactor: renombrado notificacion-registro por notificación
